--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
 
-
-
+html {
+    scroll-behavior: smooth;
+}
 
 body{
 	margin:0px;
 	padding:0px;
-	font-family: 'Poppins', sans-serif;
+	font-family: 'Open Sans', sans-serif;
 	font-size:16px;
 	line-height:28px;
 }
@@ -19,25 +21,89 @@ img{
 
 /*Header*/
 
+.mobile_services {
+    font-size: 16px;
+    font-weight: 700;
+
+    color: #333333 !important;
+}
+
+.offcanvas-body {
+    background: #FF741D;
+    
+}
+
+.mobile_navbar {
+    display: none;
+}
+
 header .bg-light {
     background: transparent !important;
 }
 
 header {
-    background: #daac00;
+    background: #fff;
+    
 }
 
 header .navbar-nav li a {
-    font-size: 20px;
-    color: #FFF !important;
+    font-size: 16px;
+    font-weight: 700;
+
+    color: #333333 !important;
+}
+
+.navbar-brand  {
+    width: 7%;;
+}
+
+.btn-toggle i {
+    font-size: 25px;
+    padding: 5px 10px;
+    border: 1px solid #ccc;
+    background: transparent;
+    color: #8d8181;
 }
 
 
 
 /*Banner*/
 
+.contact_us_btn {
+    color: #000;
+    background-color: #f8f9fa;
+    border-color: #f8f9fa;
+    text-decoration: none;
+    padding: 10px 22px;
+    border: 2px solid #FFF;
+    border-radius: 0.25rem;
+}
+
+.contact_us_btn:hover {
+    border: 2px solid #FFF;
+    color: #fff;
+    background: transparent;
+}
+
+.services_btn1 {
+    border: 2px solid #FFF;
+    color: #fff;
+    background: transparent;
+    text-decoration: none;
+    padding: 10px 22px;
+    border-radius: 0.25rem;
+}
+.services_btn1:hover {
+    border: 2px solid #FFF;
+    color: #000;
+    background: #f8f9fa;
+    text-decoration: none;
+    padding: 10px 22px;
+    border-radius: 0.25rem;
+}
+
 section.banner-section {
-    background: #fcc302;
+    background: #FF741D;
     padding: 100px 0px;
 }
 
@@ -91,13 +157,13 @@ p {
 }
 
 .btn-primary {
-    background: #fcc302;
-    border-color: #fcc302;
+    background: #FF741D;
+    border-color: #FF741D;
 }
 
 .btn-primary:hover {
-    background: #fcc302 !important;
-    border-color: #fcc302 !important;
+    background: #FF741D !important;
+    border-color: #FF741D !important;
     opacity: 0.9;
 }
 
@@ -118,7 +184,7 @@ p {
     content: "";
     width: 250px;
     height: 250px;
-    background: #fcc302;
+    background: #FF741D;
     position: absolute;
     z-index: -1;
     left: -1px;
@@ -129,7 +195,7 @@ p {
 /*Services*/
 
 section.services-section {
-    background: #fcc302;
+    background: #FF741D;
     padding: 100px 0px 70px;
     text-align: center;
     color: #FFF;
@@ -171,7 +237,7 @@ section.text-section.animal-section .text-col {
 
 section.shop-section {
     padding: 100px 0px 70px;
-    background: #fcc302;
+    background: #FF741D;
     text-align: center;
     color: #FFF;
 }
@@ -249,7 +315,7 @@ ul.team-social li {
 ul.team-social li a {
     width: 30px;
     height: 30px;
-    background: #fcc302;
+    background: #FF741D;
     display: inline-block;
     line-height: 30px;
     color: #FFF;
@@ -379,7 +445,7 @@ ul.footer-social li a {
 }
 
 ul.footer-social li a:hover {
-    background: #fcc302;
+    background: #FF741D;
     color: #FFF;
 } 
 
@@ -397,11 +463,25 @@ ul.footer-social li a:hover {
 
 
 
+
+
 /*responisve css*/
 
 
 
 @media (max-width:767px){
+
+header {
+    display: none;
+}
+
+.mobile_navbar {
+    display: block;
+}
+
+.navbar-brand  {
+    width: 18%;;
+}
 .banner-text {
     text-align: center;
 }
@@ -491,3 +571,127 @@ footer {
 
 
 
+/* Modal */
+
+/* .modal-body {
+  font-family: "Roboto", Helvetica, Arial, sans-serif;
+  font-weight: 100;
+  font-size: 12px;
+  line-height: 30px;
+  color: #777;
+  background: #4CAF50;
+} */
+
+#contact input[type="text"],
+#contact input[type="email"],
+#contact input[type="tel"],
+#contact input[type="url"],
+#contact textarea,
+#contact button[type="submit"] {
+  font: 400 12px/16px "Roboto", Helvetica, Arial, sans-serif;
+}
+
+#contact {
+  background: #F9F9F9;
+  padding: 25px;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+}
+
+#contact h3 {
+  display: block;
+  font-size: 30px;
+  font-weight: 300;
+  margin-bottom: 10px;
+}
+
+#contact h4 {
+  margin: 5px 0 15px;
+  display: block;
+  font-size: 13px;
+  font-weight: 400;
+}
+
+fieldset {
+  border: medium none !important;
+  margin: 0 0 10px;
+  min-width: 100%;
+  padding: 0;
+  width: 100%;
+}
+
+#contact input[type="text"],
+#contact input[type="email"],
+#contact input[type="tel"],
+#contact input[type="url"],
+#contact textarea {
+  width: 100%;
+  border: 1px solid #ccc;
+  background: #FFF;
+  margin: 0 0 5px;
+  padding: 10px;
+}
+
+#contact input[type="text"]:hover,
+#contact input[type="email"]:hover,
+#contact input[type="tel"]:hover,
+#contact input[type="url"]:hover,
+#contact textarea:hover {
+  -webkit-transition: border-color 0.3s ease-in-out;
+  -moz-transition: border-color 0.3s ease-in-out;
+  transition: border-color 0.3s ease-in-out;
+  border: 1px solid #aaa;
+}
+
+#contact textarea {
+  height: 100px;
+  max-width: 100%;
+  resize: none;
+}
+
+#contact button[type="submit"] {
+  cursor: pointer;
+  width: 100%;
+  border: none;
+  background: #FF741D;
+  color: #FFF;
+  margin: 0 0 5px;
+  padding: 10px;
+  font-size: 15px;
+}
+
+#contact button[type="submit"]:hover {
+  background: #43A047;
+  -webkit-transition: background 0.3s ease-in-out;
+  -moz-transition: background 0.3s ease-in-out;
+  transition: background-color 0.3s ease-in-out;
+}
+
+#contact button[type="submit"]:active {
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.5);
+}
+
+.copyright {
+  text-align: center;
+}
+
+#contact input:focus,
+#contact textarea:focus {
+  outline: 0;
+  border: 1px solid #aaa;
+}
+
+::-webkit-input-placeholder {
+  color: #888;
+}
+
+:-moz-placeholder {
+  color: #888;
+}
+
+::-moz-placeholder {
+  color: #888;
+}
+
+:-ms-input-placeholder {
+  color: #888;
+}
